add get all todo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=password
+      # - MONGO_INITDB_ROOT_USERNAME=root
+      # - MONGO_INITDB_ROOT_PASSWORD=password
       - MONGO_INITDB_DATABASE=todolist
     volumes:
       - ./local-mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
